--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,7 +71,8 @@ install:
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  #- "%CMD_IN_ENV% pip install -r requirements-dev.txt"
+  - "%CMD_IN_ENV% pip install -r requirements-dev.txt"
+  - "%CMD_IN_ENV% pip install wheel"
 
   # Build the compiled extension
   - "%CMD_IN_ENV% python winbuild.py getdeps"
